src/test/ui/issues/issue-60075.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `}`
  --> $DIR/issue-60075.rs:6:10
   |
LL |         });
   |          ^

error: incorrect close delimiter: `)`
  --> $DIR/issue-60075.rs:6:10
   |
LL |     fn qux() -> Option<usize> {
   |                               - unclosed delimiter
LL |         let _ = if true {
LL |         });
   |          ^ incorrect close delimiter

error: aborting due to 2 previous errors

